src/core-crm/objects/Engagement_List_Event__c/Engagement_List_Event__c.object-meta.xml
<CustomObject>
    <description>Contains a list of events that show the criteria in which a case was created based on the related Engagement List Criteria.</description>
    <label>Engagement List Event</label>
    <nameField>
        <displayFormat>ELE-{000000}</displayFormat>
        <label>Engagement List Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement List Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>