src/core-crm/objects/Engagement_List_Event__c/fields/Academic_Status__c.field-meta.xml
<CustomField>
    <fullName>Academic_Status__c</fullName>
    <description>The Academic Status of the student at the time of the event</description>
    <label>Academic Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Academic_Status</valueSetName>
    </valueSet>
</CustomField>