src/core-crm/objects/Engagement_List_Event__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Case related to the event</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Engagement List Events</relationshipLabel>
    <relationshipName>Engagement_List_Events</relationshipName>
    <type>Lookup</type>
</CustomField>