src/core-crm/objects/Engagement_List_Event__c/fields/Completed_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Completed_Cadence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Cadence that generated the event</description>
    <label>Completed Cadence</label>
    <referenceTo>Completed_Cadence__c</referenceTo>
    <relationshipLabel>Engagement List Events</relationshipLabel>
    <relationshipName>Engagement_List_Events</relationshipName>
    <type>Lookup</type>
</CustomField>