src/core-crm/objects/Engagement_List_Event__c/fields/Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Course Connection record related to the event</description>
    <label>Course Connection</label>
    <referenceTo>hed__Course_Enrollment__c</referenceTo>
    <relationshipLabel>Engagement List Events</relationshipLabel>
    <relationshipName>Engagement_List_Events</relationshipName>
    <type>Lookup</type>
</CustomField>