src/core-crm/objects/Engagement_List_Event__c/fields/Course_Connection_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Course Connection Assessment record related to event</description>
    <label>Course Connection Assessment</label>
    <referenceTo>Course_Connection_Assessment__c</referenceTo>
    <relationshipLabel>Engagement List Events</relationshipLabel>
    <relationshipName>Engagement_List_Events</relationshipName>
    <type>Lookup</type>
</CustomField>