src/core-crm/objects/Engagement_List_Event__c/fields/Course_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrollment_Status__c</fullName>
    <description>The Course Enrollment Status at the time of the event</description>
    <label>Course Enrollment Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>