src/core-crm/objects/Engagement_List_Event__c/fields/Engagement_List_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Engagement_List_Criteria__c</fullName>
    <description>The Engagement List Criteria that generated the event</description>
    <label>Engagement List Criteria</label>
    <referenceTo>Engagement_List_Criteria__c</referenceTo>
    <relationshipLabel>Engagement List Events</relationshipLabel>
    <relationshipName>Engagement_List_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>