src/core-crm/objects/Engagement_List_Event__c/fields/Engagement_List_Criteria_Title__c.field-meta.xml
<CustomField>
    <fullName>Engagement_List_Criteria_Title__c</fullName>
    <description>The title of the engagement list criteria</description>
    <formula>Engagement_List_Criteria__r.Engagement_List_Criteria_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement List Criteria Title</label>
    <type>Text</type>
</CustomField>