src/core-crm/objects/Engagement_List_Event__c/fields/Engagement_List_Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Engagement_List_Event_Time__c</fullName>
    <description>The date and time of the generated event</description>
    <label>Engagement List Event Time</label>
    <type>DateTime</type>
</CustomField>