src/core-crm/objects/Engagement_List_Event__c/fields/Has_Domestic_Phone__c.field-meta.xml
<CustomField>
    <fullName>Has_Domestic_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating that at the time of the event, the student had a domestic mobile number populated</description>
    <label>Has Domestic Phone</label>
    <type>Checkbox</type>
</CustomField>