src/core-crm/objects/Engagement_List_Event__c/fields/Key_Date__c.field-meta.xml
<CustomField>
    <fullName>Key_Date__c</fullName>
    <description>The date and time of the key date</description>
    <label>Key Date</label>
    <type>DateTime</type>
</CustomField>