src/core-crm/objects/Engagement_List_Event__c/fields/Leave_of_Absence__c.field-meta.xml
<CustomField>
    <fullName>Leave_of_Absence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Leave of Absence related to the event</description>
    <label>Leave of Absence</label>
    <referenceTo>Leave_of_Absence__c</referenceTo>
    <relationshipLabel>Engagement List Events</relationshipLabel>
    <relationshipName>Engagement_List_Events</relationshipName>
    <type>Lookup</type>
</CustomField>