src/core-crm/objects/Engagement_List_Event__c/fields/Previous_Academic_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Academic_Status__c</fullName>
    <description>The previous academic status of the student at the time of the event</description>
    <label>Previous Academic Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Academic_Status</valueSetName>
    </valueSet>
</CustomField>