src/core-crm/objects/Engagement_List_Event__c/fields/Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program Enrollment record related to the event</description>
    <label>Program Enrollment</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Engagement List Events</relationshipLabel>
    <relationshipName>Engagement_List_Events</relationshipName>
    <type>Lookup</type>
</CustomField>