src/core-crm/objects/Engagement_List_Event__c/fields/Program_Enrollment_Breach__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment_Breach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program Enrollment Breach record related to the event</description>
    <label>Program Enrollment Breach</label>
    <referenceTo>Program_Enrollment_Breach__c</referenceTo>
    <relationshipLabel>Engagement List Events</relationshipLabel>
    <relationshipName>Engagement_List_Events</relationshipName>
    <type>Lookup</type>
</CustomField>