src/core-crm/objects/Engagement_List_Event__c/fields/Program_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment_Status__c</fullName>
    <description>The Program Enrollment status at the time of the event</description>
    <label>Program Enrollment Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>